--- a/index.html
+++ b/index.html
@@ -13,9 +13,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fotografía de naturaleza</title>
     <link href="fotos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    
 </head>
 <body>
-    
+
+    <details open="" id="menu">
+        <summary>Menú desplegable</summary>
+            <a href="index.html">Home</a>
+            <a href="#">pagina1</a>
+            <a href="#">pagina2</a>
+    </details>
+
     <header>
         <h1>Fotografía de naturaleza</h1>
     </header>
@@ -25,7 +35,6 @@
         <img src="natural-fotos/CSC_0084.JPG" alt="">
 
         <img src="natural-fotos/DSC_0001.JPG" alt="">
-
 
         <img src="natural-fotos/DSC_0004.JPG" alt="">
 
