animacion de texto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <details open="" id="menu">
         <summary>Menú desplegable</summary>
             <a href="index.html">Home</a>
-            <a href="#">pagina1</a>
+            <a href="textoanimado.html">Texto animado</a>
             <a href="#">pagina2</a>
     </details>
 
